Globalize ID schema validation
